feat: add moviePoster field to fantasy movies
